--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
     "formik": "^2.2.1",
     "typescript": "^4.0.5",
     "yup": "^0.29.3"
