--- a/note/react/package.json
+++ b/note/react/package.json
@@ -24,6 +24,8 @@
     "@material-ui/core": "^4.11.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.24",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
