--- a/note/react/package.json
+++ b/note/react/package.json
@@ -30,7 +30,11 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-virtualized-auto-sizer": "^1.0.5",
     "umi": "^3.2.24",
     "yorkie": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/react-virtualized-auto-sizer": "^1.0.0"
   }
 }
