--- a/note/react/package.json
+++ b/note/react/package.json
@@ -29,9 +29,12 @@
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^16.12.0",
     "react-virtualized-auto-sizer": "^1.0.5",
+    "styled-components": "^5.2.3",
     "umi": "^3.2.24",
+    "uuid": "^8.3.2",
     "yorkie": "^2.0.0"
   },
   "devDependencies": {
