--- a/note/react/package.json
+++ b/note/react/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.11.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.24",
+    "ahooks": "^2.10.1",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "lint-staged": "^10.0.7",
@@ -31,6 +32,7 @@
     "react": "^16.12.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^16.12.0",
+    "react-jss": "^10.6.0",
     "react-virtualized-auto-sizer": "^1.0.5",
     "styled-components": "^5.2.3",
     "umi": "^3.2.24",
