--- a/note/react/package.json
+++ b/note/react/package.json
@@ -31,6 +31,8 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.12.0",
     "react-jss": "^10.6.0",
     "react-virtualized-auto-sizer": "^1.0.5",
