--- a/note/react/package.json
+++ b/note/react/package.json
@@ -27,6 +27,7 @@
     "ahooks": "^2.10.1",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "jsonp": "^0.2.1",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
