寻找拖拽解决方案

--- a/note/react/package.json
+++ b/note/react/package.json
@@ -35,6 +35,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.12.0",
+    "react-grid-layout": "^1.2.4",
     "react-jss": "^10.6.0",
     "react-virtualized-auto-sizer": "^1.0.5",
     "styled-components": "^5.2.3",
